# learning-compiler-graphs

./: Dockerfile  Dockerfile-Base  README.md  artifact.ipynb  artifact.tex  bootstrap.sh  build_deps.sh  consolidate_csvs_devmap.sh  consolidate_csvs_tc.sh  ml.slurm  preamble.py  r-deps.R  requirements.txt  run.sh  start-notebook.sh
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/2DCONV/: 2DConvolution.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/2MM/: 2mm.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/3DCONV/: 3DConvolution.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/3MM/: 3mm.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/ATAX/: atax.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/BICG/: bicg.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/CORR/: correlation.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/COVAR/: covariance.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/GEMM/: gemm.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/GESUMMV/: gesummv.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/GRAMSCHM/: gramschmidt.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/MVT/: mvt.c
dependencies/benchmarks_srcs/polybench-gpu-1.0/OpenCL/SYR2K/: syr2k.c
lib/: .pylintrc  utils.py
lib/c/clang_miner/: CMakeLists.txt  clang_miner.cpp
lib/c/miner_llvm_pass/: CMakeLists.txt
lib/c/miner_llvm_pass/src/: CMakeLists.txt  funcinfo.cc  funcinfo.hh  main.cc  miner.cc  miner.hh
lib/experiment/: DevMapExperiment.py  Spawner.py  ThreadCoarsenExperiment.py
lib/model/: PredictionModel.py
lib/model/cell/: PredictionCell.py
lib/model/layer/: EmbeddingLayer.py  GGNNModelLayer.py  PropagationModelLayer.py
lib/representations/: utils.py
lib/representations/clang/: codegraph_models.py  preprocess.py
lib/representations/llvm/: codegraph_models.py  preprocess.py
patches/ncc/: ncc.patch
results/devmap/devmap_inst2vec_random/: ncc_devmap_10_summary.json  ncc_devmap_1_summary.json  ncc_devmap_2_summary.json  ncc_devmap_3_summary.json  ncc_devmap_4_summary.json  ncc_devmap_5_summary.json  ncc_devmap_6_summary.json  ncc_devmap_7_summary.json  ncc_devmap_8_summary.json  ncc_devmap_9_summary.json
(+4106 files in other folders)
